# disky

./: .gitignore  Cargo.toml  README.md  TODO.md
benches/: parallel_reader_bench.rs  parallel_writer_bench.rs  record_io_bench.rs
examples/: multi_threaded_examples.rs  single_threaded_examples.rs
src/: constants.rs  error.rs  hash.rs  lib.rs  reader.rs  record_position.rs  tests.rs  varint.rs  writer.rs
src/blocks/: mod.rs  reader.rs  utils.rs  writer.rs
src/blocks/tests/: basic_writing_tests.rs  block_boundary_tests.rs  config_tests.rs  corruption_recovery_tests.rs  edge_case_boundary_tests.rs  edge_case_chunk_boundary_bug.rs  edge_cases_tests.rs  mod.rs  reader_edge_cases.rs  reader_tests.rs  real_world_tests.rs
src/chunks/: chunks_parser.rs  header.rs  header_parser.rs  header_writer.rs  mod.rs  signature.rs  signature_parser.rs  signature_writer.rs  simple_chunk.rs  simple_chunk_parser.rs  simple_chunk_reader.rs  simple_chunk_writer.rs  writer.rs
src/chunks/tests/: chunks_parser_tests.rs  mod.rs  simple_chunk_parser_tests.rs
src/compression/: core.rs  mod.rs  zstd.rs
src/compression/tests/: basic_rw_zstd.rs  mod.rs
src/parallel/: byte_queue.rs  mod.rs  multi_threaded_reader.rs  multi_threaded_writer.rs  promise.rs  queue.rs  reader.rs  resource_pool.rs  resource_queue.rs  sharding.rs  task_queue.rs  writer.rs
src/parallel/sharding/: auto_sharder.rs  file_locator.rs  file_sharder.rs  memory_locator.rs  mod.rs  random_locator.rs  traits.rs  utils.rs
src/parallel/tests/: auto_sharding_tests.rs  close_behavior_tests.rs  corruption_handling_tests.rs  error_handling_tests.rs  mod.rs  multi_threaded_reader_tests.rs  multi_threaded_writer_tests.rs  reader_tests.rs  (+8 more)
src/sampling/: mod.rs  reservoir_shuffle.rs  sampling_reader.rs
src/tests/: mod.rs  utils.rs
tests/: README.md  mod.rs
tests/integration/: compression_ratio_test.rs  mod.rs  multi_threaded_read_write_test.rs  parallel_read_write_test.rs  round_trip_test.rs  sampling_read_test.rs
(+16 files in other folders)
