[package]
name = "disky"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the Riegeli file format"
authors = ["Jonas Valfridsson jonasrsv42@gmail.com"]
license = "Apache-2.0"

[dependencies]
thiserror = "1.0.60"
bytes = "1.6.0"
highway = "1.1.0"
log = "0.4.20"
env_logger = "0.10.1"

[dev-dependencies]
tempfile = "3.10.1"
