[package]
name = "disky"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the Riegeli file format"
authors = ["Jonas Valfridsson jonasrsv42@gmail.com"]
license = "Apache-2.0"

[features]
# Parallel implementation using multiple threads for improved performance
parallel = ["dep:glob"]

[dependencies]
thiserror = "1.0.60"
bytes = "1.6.0"
highway = "1.1.0"
log = "0.4.20"
env_logger = "0.10.1"
glob = { version = "0.3.1", optional = true }

[dev-dependencies]
tempfile = "3.10.1"
criterion = "0.5.1"

[[bench]]
name = "record_io_bench"
harness = false
